# University

./: README.md
AeroDynamics_C/: dansa.cpp
Minesweeper/Python/: minesweeper.py  test.py
Minesweeper/cpp/: Minesweeper.cpp
PhenomenonMathmaticalModelTheory/: simu1.py  simu2.py
aero_dynamics_c/: aeroc.cpp
airplane_dynamics_3/report1/: cal1.py  gra1.py  gra2.py
balsius_shooting_method_bisection/: balsius_shooting_method_bisection.py
blasius_shooting_method_bisection/: blasius_shooting_method_bisection.py
info_system_3/: 44.py  45.py  46.py  47.py  51.py  53.py  54.py  55.py  81.py  82.py
knowledge_acquisition_systems/: Pipfile  pyproject.toml
knowledge_acquisition_systems/notebook/: cov_type.ipynb  covertype.ipynb  covertype_gmm.ipynb  covertype_kernel_pca.ipynb  covertype_kmeans.ipynb  covertype_kmeans_three_data.ipynb  iris_gmm.ipynb  iris_kmeans.ipynb  test.ipynb  wine_gmm.ipynb  wine_kmeans.ipynb
minesweeper/: README.md
minesweeper/cpp/: Minesweeper.cpp
phenomenon_mathmatical_model_theory/: README.md
sc_control/: kalman.cpp  simulation.cpp
system_experiment/aoyoko/plane_vibration/: natural_vibration.py
